--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,12 +4,6 @@
 #
 # To use the locales, use `I18n.t`:
 #
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
 #     I18n.t 'hello'
 #
 # In views, this is aliased to just `t`:
@@ -60,6 +54,11 @@ en:
   # global parliaments translations
   parliament: 'parliament'
   parliament_plural: 'parliaments'
+  # global places translations
+  place: 'place'
+  place_plural: 'places'
+  region: 'region'
+  region_plural: 'regions'
   # global generic translations
   view_all: 'view all'
   all: 'all'
@@ -114,8 +113,6 @@ en:
     show:
       mp_for: 'MP for'
       contact: 'contact'
-      contact_postcode: 'Please include your postcode when contacting your MP.'
-      contact_discussion: 'You may be able to discuss issues with your MP in person or online. Contact them for details.'
       membership_history: 'membership history'
       election_history: 'election history'
       roles: 'roles'
@@ -123,8 +120,6 @@ en:
       check_mp_alternative: 'Check if this is your MP'
       correct_mp: '%{name} is the MP for the postcode entered.'
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
-      figcaption: 'The official MP portraits are %{link}'
-      available_download: 'available to download'
     constituencies:
       index:
         title: '%{current_and_former} %{constituency_plural}'
@@ -142,27 +137,6 @@ en:
         title: '%{current_and_former} %{parties_and_groups}'
       current:
         title: '%{current} %{party}'
-  # media translations
-  media:
-    show:
-      title: 'official portrait of'
-      figcaption: 'The official MP portraits are %{link}'
-      available_download: 'available to download'
-      license: 'This photo, and all related crops, are released under an %{link} license.'
-      license_link: 'Attribution 3.0 Unported (CC BY 3.0)'
-      license_context: 'This means that you can use, share and adapt it, as long as you give proper attribution, provide a link to the license, and indicate if changes were made to the image. See the %{link} for more details.'
-      license_context_link: 'full license'
-      portraits_heading: 'Cropped portraits'
-      download_jpeg: 'download jpeg'
-      download_original: 'download original'
-      download_res_original: '(3797 x 5315)'
-      download_heading_1: '3:2 portrait'
-      download_res_wide_portrait: '(3000 x 2000)'
-      download_heading_2: '3:4 portrait'
-      download_res_portrait: '(1500 x 2000)'
-      download_heading_3: '1:1 portrait'
-      download_res_thumbnail: '(1500 x 1500)'
-      no_portrait: 'There is currently no official portrait for this MP.'
   # contact points translations
   contact_points:
     index:
@@ -190,10 +164,6 @@ en:
       title: # needs title
     show:
       title: # title does not require translation
-      check_constituency: 'Check if %{name} is your constituency'
-      check_constituency_alternative: 'Check if this is your constituency'
-      correct_constituency: '%{name} is the constituency for the postcode entered.'
-      incorrect_constituency: '%{name} is not the constituency for the postcode entered.  Your constituency is '
     members:
       index:
         title: '%{current_and_former} %{mp_plural}'
@@ -216,7 +186,7 @@ en:
       check_constituency: 'check if this is your constituency'
       former_constituency: 'This is a former constituency. %{current_constituencies_link}.'
       current_constituencies_link: 'view current constituencies'
-      constituency_map_fallback: 'A map of the constituency is available. To view it JavaScript must enabled.'
+      constituency_map_fallback: 'Map of constituency is unavailable.'
   # parties translations
   parties:
     index:
@@ -316,6 +286,10 @@ en:
       find_mp_house: 'Find an MP by house'
     constituencies:
       find_constituency_a_to_z: 'Find a constituency by A-Z list'
+  # place translations
+  places:
+    all_regions: 'All Regions.'
+    region_constituencies: 'Find constituencies by region.'
   # no content translations
   no_content:
     empty_list:
