--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,12 +4,6 @@
 #
 # To use the locales, use `I18n.t`:
 #
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
 #     I18n.t 'hello'
 #
 # In views, this is aliased to just `t`:
@@ -60,6 +54,11 @@ en:
   # global parliaments translations
   parliament: 'parliament'
   parliament_plural: 'parliaments'
+  # global places translations
+  place: 'place'
+  place_plural: 'places'
+  region: 'region'
+  region_plural: 'regions'
   # global generic translations
   view_all: 'view all'
   all: 'all'
@@ -316,6 +315,10 @@ en:
       find_mp_house: 'Find an MP by house'
     constituencies:
       find_constituency_a_to_z: 'Find a constituency by A-Z list'
+  # place translations
+  places:
+    all_regions: 'All Regions.'
+    region_constituencies: 'Find constituencies by region.'
   # no content translations
   no_content:
     empty_list:
