--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,12 +126,12 @@ en:
       available_download: 'available to download'
       when_to_contact:
         title: 'When to contact an MP'
-        mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituencies and can help with issues such as:'
-        hospitals_nhs: 'Hospitals and the NHS'
-        problems: 'Problems with benefits, pensions and national insurance'
-        immigration: 'Immigration'
-        school_closures: 'School closures and funding'
-        transport: 'Transport facilities'
+        mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
+        hospitals_nhs: 'hospitals and the NHS'
+        problems: 'problems with benefits, pensions and national insurance'
+        immigration: 'immigration'
+        school_closures: 'school closures and funding'
+        transport: 'transport facilities'
         who_else_can_help: 'Who else can help with my issue?'
     constituencies:
       index:
