[WEBSITE-1925][WEBSITE-1981][WEBSITE-2002] Refactor people/show timeline
* NB. Bandiera condition around committee roles currently commented out
* Added HistoryHelper, to sort roles by date
* Added GroupingHelper, to group incumbencies by role
* Added tests for HistoryHelper and GroupingHelper
* Refactored people/show timeline view
* Amended PeopleController#show to use HistoryHelper and GroupingHelper
* Amended people/show tests
* Added translation tag for 'House of Lords role'
* Implement latest timeline styling

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,6 +122,7 @@ en:
       election_history: 'election history'
       roles: 'roles'
       parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
       committee_role: 'committee role'
       held_currently: 'Held currently'
       held_in: 'Held in the last'
