--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,15 +135,39 @@ en:
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
-      when_to_contact:
-        title: 'When to contact an MP'
-        mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
-        hospitals_nhs: 'hospitals and the NHS'
-        problems: 'problems with benefits, pensions and national insurance'
-        immigration: 'immigration'
-        school_closures: 'school closures and funding'
-        transport: 'transport facilities'
-        who_else_can_help: 'Who else can help with my issue?'
+    when_to_contact:
+      title: 'When to contact an MP'
+      mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
+      hospitals_nhs: 'hospitals and the NHS'
+      problems: 'problems with benefits, pensions and national insurance'
+      immigration: 'immigration'
+      school_closures: 'school closures and funding'
+      transport: 'transport facilities'
+      who_else_can_help: 'Who else can help with my issue?'
+      contact_postcode: 'Please include your postcode when contacting your MP.'
+    current_timeline_roles:
+      parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
+      committee_role: 'committee role'
+      government_role: 'government role'
+      held_currently: 'Held currently'
+      held_in: 'Held in the last'
+      show_history: 'Show history'
+      years: 'years'
+    previous_roles:
+      parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
+      committee_role: 'committee role'
+      government_role: 'government role'
+      held_currently: 'Held currently'
+      held_in: 'Held in the last'
+      show_history: 'Show history'
+      years: 'years'
+    current_roles:
+      parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
+      committee_role: 'committee role'
+      government_role: 'government role'
     constituencies:
       index:
         title: '%{current_and_former} %{constituency_plural}'
