[WEBDEV-312] Refactor people show * Extracted people show view into multiple partials * Amended en.yml for new partials

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,14 +117,9 @@ en:
       mp_for: 'MP for'
       contact: 'contact'
       contact_postcode: 'Please include your postcode when contacting your MP.'
-      contact_discussion: 'You may be able to discuss issues with your MP in person or online. Contact them for details.'
       membership_history: 'membership history'
       election_history: 'election history'
       roles: 'roles'
-      parliamentary_role: 'parliamentary role'
-      house_of_lords_role: 'House of Lords role'
-      committee_role: 'committee role'
-      government_role: 'government role'
       held_currently: 'Held currently'
       held_in: 'Held in the last'
       show_history: 'Show history'
@@ -133,17 +128,36 @@ en:
       check_mp_alternative: 'Check if this is your MP'
       correct_mp: '%{name} is the MP for the postcode entered.'
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
+    image:
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
-      when_to_contact:
-        title: 'When to contact an MP'
-        mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
-        hospitals_nhs: 'hospitals and the NHS'
-        problems: 'problems with benefits, pensions and national insurance'
-        immigration: 'immigration'
-        school_closures: 'school closures and funding'
-        transport: 'transport facilities'
-        who_else_can_help: 'Who else can help with my issue?'
+    contact_details:
+      contact_discussion: 'You may be able to discuss issues with your MP in person or online. Contact them for details.'
+    when_to_contact:
+      title: 'When to contact an MP'
+      mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
+      hospitals_nhs: 'hospitals and the NHS'
+      problems: 'problems with benefits, pensions and national insurance'
+      immigration: 'immigration'
+      school_closures: 'school closures and funding'
+      transport: 'transport facilities'
+      who_else_can_help: 'Who else can help with my issue?'
+      contact_postcode: 'Please include your postcode when contacting your MP.'
+    timeline_roles:
+      mp_for: 'MP for'
+      parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
+      committee_role: 'committee role'
+      government_role: 'government role'
+      held_currently: 'Held currently'
+      held_in: 'Held in the last'
+      years: 'years'
+    current_roles:
+      mp_for: 'MP for'
+      parliamentary_role: 'parliamentary role'
+      house_of_lords_role: 'House of Lords role'
+      committee_role: 'committee role'
+      government_role: 'government role'
     related_links:
       title: 'related links'
       portrait: "%{name}&#8217;s official portrait is %{link}."
