[WEBSITE-2029] Add government roles
* Added government roles to people controller
* Added government roles to people show view
* Added tests for people show
* Added tests for people controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,7 @@ en:
       parliamentary_role: 'parliamentary role'
       house_of_lords_role: 'House of Lords role'
       committee_role: 'committee role'
+      government_role: 'government role'
       held_currently: 'Held currently'
       held_in: 'Held in the last'
       show_history: 'Show history'
