--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,7 +117,6 @@ en:
       mp_for: 'MP for'
       contact: 'contact'
       contact_postcode: 'Please include your postcode when contacting your MP.'
-      contact_discussion: 'You may be able to discuss issues with your MP in person or online. Contact them for details.'
       membership_history: 'membership history'
       election_history: 'election history'
       roles: 'roles'
@@ -135,6 +134,8 @@ en:
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
+    contact_details:
+      contact_discussion: 'You may be able to discuss issues with your MP in person or online. Contact them for details.'
     when_to_contact:
       title: 'When to contact an MP'
       mps_can_help_with: 'MPs can help with issues that are the responsibility of UK Parliament. They represent their constituents and can help with issues such as:'
@@ -146,6 +147,7 @@ en:
       who_else_can_help: 'Who else can help with my issue?'
       contact_postcode: 'Please include your postcode when contacting your MP.'
     current_timeline_roles:
+      mp_for: 'MP for'
       parliamentary_role: 'parliamentary role'
       house_of_lords_role: 'House of Lords role'
       committee_role: 'committee role'
@@ -155,6 +157,7 @@ en:
       show_history: 'Show history'
       years: 'years'
     previous_roles:
+      mp_for: 'MP for'
       parliamentary_role: 'parliamentary role'
       house_of_lords_role: 'House of Lords role'
       committee_role: 'committee role'
@@ -164,6 +167,7 @@ en:
       show_history: 'Show history'
       years: 'years'
     current_roles:
+      mp_for: 'MP for'
       parliamentary_role: 'parliamentary role'
       house_of_lords_role: 'House of Lords role'
       committee_role: 'committee role'
