--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,13 +31,13 @@ en:
             surname:
               blank: 'Please enter a last name'
             address_1:
-              blank: 'Please enter first line of address' 
+              blank: 'Please enter first line of address'
             telephone:
               blank: 'Please enter a phone number'
             email:
               invalid: 'Please enter a valid email address'
             postcode:
-              invalid: 'Please enter a valid post code' 
+              invalid: 'Please enter a valid post code'
 
         hybrid_bill_organisation_group_submission:
           attributes:
@@ -46,15 +46,15 @@ en:
             surname:
               blank: 'Please enter a last name'
             on_behalf_of:
-              blank: "Please enter the names of the organisations"  
+              blank: "Please enter the names of the organisations"
             address_1:
-              blank: 'Please enter first line of address' 
+              blank: 'Please enter first line of address'
             telephone:
               blank: 'Please enter a phone number'
             email:
               invalid: 'Please enter a valid email address'
             postcode:
-              invalid: 'Please enter a valid post code' 
+              invalid: 'Please enter a valid post code'
 
         hybrid_bill_organisation_submission:
           attributes:
@@ -65,24 +65,24 @@ en:
             surname:
               blank: 'Please enter a last name'
             address_1:
-              blank: 'Please enter first line of address' 
+              blank: 'Please enter first line of address'
             telephone:
               blank: 'Please enter a phone number'
             email:
               invalid: 'Please enter a valid email address'
             postcode:
-              invalid: 'Please enter a valid post code' 
+              invalid: 'Please enter a valid post code'
 
         hybrid_bill_individual_group_submission:
           attributes:
             first_name:
               blank: "Please enter a first name"
             on_behalf_of:
-              blank: "Please enter a name for the group"  
+              blank: "Please enter a name for the group"
             surname:
               blank: 'Please enter a last name'
             address_1:
-              blank: 'Please enter first line of address' 
+              blank: 'Please enter first line of address'
             telephone:
               blank: 'Please enter a phone number'
             email:
@@ -97,17 +97,17 @@ en:
             surname:
               blank: 'Please enter a last name'
             address_1:
-              blank: 'Please enter first line of address' 
+              blank: 'Please enter first line of address'
             telephone:
               blank: 'Please enter a phone number'
             email:
               invalid: 'Please enter a valid email address'
             postcode:
-              invalid: 'Please enter a valid post code' 
+              invalid: 'Please enter a valid post code'
 
-  hybrid_bills:    
+  hybrid_bills:
     show:
-      something_went_wrong: 'Sorry, something went wrong. Please try again later. If the problem continues call us on 020 7219 3000 or email: petition@parliament.uk.'        
+      something_went_wrong: 'Sorry, something went wrong. Please try again later. If the problem continues call us on 020 7219 3000 or email: petition@parliament.uk.'
 
   # global people translations
   mp: 'MP'
@@ -283,10 +283,13 @@ en:
       download_res_original: '(3797 x 5315)'
       download_heading_1: '3:2 portrait'
       download_res_wide_portrait: '(3000 x 2000)'
+      alt_text_wide_portrait: '3000 by 2000 pixels'
       download_heading_2: '3:4 portrait'
       download_res_portrait: '(1500 x 2000)'
+      alt_text_portrait: '1500 by 2000 pixels'
       download_heading_3: '1:1 portrait'
       download_res_thumbnail: '(1500 x 1500)'
+      alt_text_thumbnail: '1500 by 1500 pixels'
       no_portrait: 'There is currently no official portrait for this MP.'
   # contact points translations
   contact_points:
