--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -681,6 +681,15 @@ en:
   places:
     all_regions: 'All Regions.'
     region_constituencies: 'Find constituencies by region.'
+  # article translations
+  articles:
+    show:
+      related_articles: 'Related Articles'
+      collection_articles: 'Collections this article belongs to'
+  # collection translations
+  collections:
+    show:
+      in_this_section: 'In this section'
   # no content translations
   no_content:
     empty_list:
