[HB] Post phase updates to hybrid bill views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,12 +117,13 @@ en:
     object_to_ap_one: 'Object to additional provision one'
     of_the: 'of the'
     object_by_email: 'petition by email, post or in person'
+    petition_status_post: 'The deadline has passed.'
     index:
       title: 'hybrid bills'
       intro_a: 'Hybrid bills mix the characteristics of'
-      public_bills: 'Public Bills'
+      public_bills: 'public bills'
       intro_b: 'and'
-      private_bills: 'Private Bills'
+      private_bills: 'private bills'
       intro_c: 'They often propose works of national importance in a specific area of the UK.'
       intro_d: 'For example, the Channel Tunnel Bills passed in the 1970s and 1980s and the Crossrail Bill passed in 2008.'
       intro_e: 'Changes to the law proposed by a hybrid bill affect the general public and impact specific individuals, groups or organisations.'
