[HB] Hybrid bills views content translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,20 +104,60 @@ en:
               invalid: 'Please enter a valid email address'
             postcode:
               invalid: 'Please enter a valid post code'
-
   hybrid_bills:
     # Global hybrid bills translations
     hs2: 'High Speed Rail (West Midlands to Crewe)'
     hs2_bill: 'bill'
-    hs2_ap: 'additional provision'
-    hs2_ap_one: 'one'
-    object_to: 'Object to the'
+    hs2_ap: 'Additional Provision'
+    hs2_ap_one: '1'
+    object_to: 'Object to'
     the_bill: 'the bill'
     object_to_the_bill: 'Object to the bill'
-    object_to_ap_one: 'Object to additional provision one'
-    of_the: 'of the'
+    object_online: 'petition on our website'
     object_by_email: 'petition by email, post or in person'
+    petition_online: 'petition online'
+    hs2_committee: 'High Speed Rail (West Midlands to Crewe) Bill Committee'
+    hs2_website: 'website'
+    of_the: 'of the'
+    the: 'the'
+    hyphen: '-'
+    # petition status
+    petition_status_pre: 'The petitioning period will open on Tuesday 30 January 2018.'
+    petition_status_active: 'The deadline is 5pm on Monday 26 February 2018.'
     petition_status_post: 'The deadline has passed.'
+    # help and support
+    help_support: 'help and support'
+    help_support_a: 'For more information email'
+    help_support_b: 'or phone'
+    help_support_email: 'prbohoc@parliament.uk'
+    help_support_phone: '020 7219 3250'
+    help_support_template: 'petition template'
+    help_support_format: 'If you need a different format, email'
+    # steps
+    step_1: 'step 1'
+    step_2: 'step 2'
+    step_3: 'step 3'
+    step_4: 'step 4'
+    step_5: 'step 5'
+    step_1_2: 'of 2'
+    step_1_5: 'of 5'
+    # petitioner types
+    individual: 'individual'
+    individual_owned: 'individuals’s'
+    individual_desc: 'You are submitting a petition for one person.'
+    group_individuals: 'group of individuals'
+    group_individuals_owned: 'group of individuals’'
+    group_individuals_desc: 'You are submitting a petition for a group of people.'
+    organisation: 'organisation'
+    organisation_owned: 'organisation’s'
+    organisation_desc: 'You are submitting a petition for a business or organisation.'
+    group_organisations: 'group of organisations'
+    group_organisations_owned: 'group of organisations’'
+    group_organisations_desc: 'You are submitting a petition for a group of businesses or organisations.'
+    pet_details: 'details'
+    pet_of: 'of'
+    pet_in: 'in'
+    # root page
     index:
       title: 'hybrid bills'
       intro_a: 'Hybrid bills mix the characteristics of'
@@ -134,12 +174,160 @@ en:
       object_hybrid_bill_b: 'This can lead to changes being made to the bill, called additional provisions.'
       object_hybrid_bill_c: 'Objecting to additional provisions is separate to objecting to the original bill.'
       current_hybrid_bills: 'current hybrid bills'
+    # home page
     show:
-      petition_status: 'The deadline is 5pm on Monday 26 February 2018.'
+      overview: 'overview'
+      overview_a_bill: 'Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands to Crewe) Bill can object to it.'
+      overview_a_ap: 'Any individual, group of individuals, organisation or group of organisations affected by Additional Provision 1 of the High Speed Rail (West Midlands to Crewe) Bill can object to it'
+      overview_b: 'To find out more about the Bill, visit the'
+      overview_c: 'High Speed Two (HS2) Limited website'
+      overview_post: 'For the latest updates, visit the'
+      object_bill: 'objecting to the bill'
+      object_ap: 'Objecting to Additional Provision 1'
+      object_bill_a_bill: 'To object to the High Speed Rail (West Midlands to Crewe) Bill'
+      object_bill_a_ap: 'To object to Additional Provision 1 of the High Speed Rail (West Midlands to Crewe) Bill'
+      object_bill_a: 'you will need to download and complete our petition template. You can do this by petitioning on our website or by email, post or in person.'
+      object_bill_b_bill: 'the Bill.'
+      object_bill_b_ap: 'Additional Provision 1.'
+      object_bill_b: 'We will ask for your name, address and examples of how you’re affected by'
+      object_bill_c: 'The petition does not require any signatures.'
+      object_bill_pre: 'For more information on how to object, visit the'
+      contact_details: 'contact details'
+      contact_details_a: 'We will ask you to tell us who should be contacted about your petition. This main contact can be you or someone else, for example a friend, family member or lawyer.'
+      contact_details_b: 'The main contact will receive all petition communications. They will usually be invited to give evidence about it to the'
+      after_sending_petition: 'after sending your petition'
+      after_sending_petition_a: 'Once we’ve received your petition we’ll ask you to pay a £20 admin fee.'
+      after_sending_petition_a_ap: ', unless you paid it when objecting to the original bill'
+      after_sending_petition_b: 'We’ll publish your petition on our website. This will include your name and address.'
+      after_sending_petition_c: 'We’ll send your petition to HS2 Ltd, who may contact you to discuss it.'
+      after_sending_petition_d: 'We’ll also send your petition to the Department for Transport (DfT). They can challenge it if they don’t believe you are affected by'
+      after_sending_petition_e: 'You will usually be invited to give evidence to the committee about your petition. Hearings are scheduled for spring/summer 2018.'
       something_went_wrong: 'Sorry, something went wrong. Please try again later. If the problem continues call us on 020 7219 3250 or email: prbohoc@parliament.uk.'
+    # petition by email, post or in person pages
+    email:
+      subtitle: 'who are you submitting a petition for?'
+      legend: 'please choose who you submitting a petition for'
+      writing_petition: 'writing your petition'
+      writing_petition_how: 'how to write your petition'
+      writing_petition_how_a: 'To write your petition, download and complete the petition template.'
+      writing_petition_how_b: 'You can send your completed version to us by email, post or in person.'
+      send_email: 'send by email'
+      send_email_a: 'Email your completed petition template to'
+      send_post: 'send by post'
+      send_post_a: 'Post your completed petition template to Hybrid Bills Office, Houses of Parliament, London, SW1A 0AA.'
+      send_person: 'send in person'
+      send_person_a: 'call'
+      send_person_b: 'to arrange a time to deliver your completed petition template.'
+      bill_updates: 'bill updates'
+      bill_updates_a: 'For news and updates on the Bill, visit the'
+    # petition online - template download page
+    writing-your-petition-online:
+      online: 'online'
+      to_write_petition: 'to write your petition'
+      to_write_petition_a: 'download and save the petition template to your device'
+      to_write_petition_b: 'complete the petition template'
+      to_write_petition_c: 'save your completed template'
+      to_write_petition_d: 'click the link at the end of your template to continue the process'
+      to_write_petition_e: 'We’ll ask you to upload your completed template later.'
+      completed_template: 'have you completed your petition template?'
+      completed_template_legend: 'please confirm that you completed your petition template'
+      complete_template: 'complete your petition template before you continue'
+    # petitioner details form
+    user_details_form:
+      group_name: 'Group name'
+      organisation_name: 'Organisation name'
+      group_organisations_name: 'Names of Organisations'
+      petition_legend: 'please provide details for the petitioner(s)'
+      petition_contact: 'who should be contacted about this petition?'
+      petition_contact_legend: 'please confirm who should be contacted about this petition'
+      petition_contact_opt_a: 'individual above'
+      petition_contact_opt_b: 'another contact'
+      main_contact: 'main contact’s details'
+      main_contact_legend: 'please provide details for the main contact'
+    # petition template upload form
+    document-submission:
+      title: 'upload your completed template'
+      upload_requirements_title: 'uploaded file must'
+      upload_requirements_a: 'be less than 2 MB in size'
+      upload_requirements_b: 'not include any images, graphics or videos'
+      upload_template: 'upload your petition template'
+      upload_error_title: 'Errors'
+      upload_error_a: 'please make sure the file you have uploaded is doc, docx, rtf, txt, odt or pdf.'
+      upload_error_b: 'the file you have uploaded is too big. Please make sure it is smaller than 2 MB.'
+    # petitioner terms and conditions page
+    terms-conditions:
+      title: 'terms and conditions'
+      personal_info: 'personal information'
+      personal_info_a: 'A copy of this petition and information provided in the online form will be:'
+      personal_info_b: 'kept in the'
+      personal_info_c: 'Private Bill Office'
+      personal_info_d: 'and as a record in the'
+      personal_info_e: 'Parliamentary Archives'
+      personal_info_f: 'sent to the'
+      personal_info_g: 'Department for Transport'
+      personal_info_h: 'and'
+      personal_info_i: 'High Speed Two (HS2) Limited'
+      personal_info_j: 'after the petition has been received by the Private Bill Office'
+      personal_info_k: 'We will publish your petition on UK Parliament’s website. This will include your name and address.'
+      personal_info_l: 'The personal information you have provided may be kept in a database by both Private Bill Offices.'
+      comms: 'communications'
+      comms_a: 'Private Bill Office staff may call or email any of the people named in the petition to verify the information provided.'
+      comms_b: 'Communications may be stored in databases to keep track of information you have given or received. This information may be shared between the Private Bill Offices.'
+      consent: 'consent and confirmation'
+      consent_a: 'The information you have provided in the petition and online form is accurate.'
+      consent_b: 'If you have completed the form on behalf of an individual, a group of individuals, an organisation, or a group of organisations, you have been authorised to do so.'
+      send_petition_button: 'send petition'
+    # petition submission confirmation page
+    submission-complete:
+      title: 'thank you for your petition'
+      petition_ref: 'your petition reference is'
+      petition_ref_a: 'This petition reference and the information on this page will be sent to'
+      petition_ref_b: 'in the next 15 minutes.'
+      what_next: 'what happens next'
+      what_next_a: 'We’ll email you within 14 days about how to pay the £20 admin fee.'
+      what_next_ap: ', unless you paid it when objecting to the original bill'
+      what_next_b: 'We’ll publish your petition on our website. This will include your name and address.'
+      what_next_c: 'We’ll send your petition to HS2 Ltd, who may contact you to discuss it.'
+      what_next_d: 'We’ll also send your petition to the Department for Transport (DfT). They can challenge it if they don’t believe you are affected by'
+      what_next_e: 'You will usually be invited to give evidence to the committee about your petition. Hearings are scheduled for spring/summer 2018.'
+      withdrawing: 'withdrawing your petition'
+      withdrawing_a: 'You can withdraw your petition by emailing us at'
+      withdrawing_b: 'Anyone named on a petition can withdraw from the petition, leaving the remaining petitioners to continue with it.'
+      withdrawing_c: 'Withdrawn petitions will not be removed from the website.'
+      change_contact: 'changing contact information'
+      change_contact_a: 'If you want to change the main contact for your petition call us on'
+      feedback: 'give feedback'
+      feedback_a: 'Help us improve this petitioning process by completing our'
+      feedback_b: 'feedback form'
+
+  # global user form labels and navigation
+  user_forms:
+    error_title: 'your form has errors.'
+    error_text: 'please correct these errors and submit again.'
+    next_button: 'next'
+    back_button: 'back'
+    word_download_button: 'Download template as Word document'
+    yes_radio: 'yes'
+    no_radio: 'no'
+    complete_fields: 'complete the fields below'
+    first_name: 'first name(s)'
+    last_name: 'last name'
+    address_1: 'address line 1'
+    address_2: 'address line 2'
+    postcode: 'post code'
+    country_uk: 'Are you based in the UK?'
+    country_select: 'country you’re based in'
+    country_select_legend: 'please select the country you’re based in'
+    email: 'email'
+    telephone: 'phone'
+    updates: 'i would like to receive updates from the'
+    optional: '(optional)'
+    choose_file: 'choose file'
+    select_file: 'no file(s) selected'
+    terms_conditions_accept: 'i agree to the terms and conditions'
 
   # global transactional messaging
-  open_new_window_link: '(This link will open in a new window)'
+  open_new_window_link: ' (This link will open in a new window)'
   javascript_disabled: 'JavaScript is currently switched off in your browser. Switch it on for a better experience.'
   cookies: 'cookies'
   cookies_disabled_a: 'JavaScript is switched off in your browser. This might mean'
