[GTP-191] GTP Navigation/iteration of GTP pages
* Remove @related_articles variable, replacing with @collection.articles
* Amend articles/show view to show other articles in all collections an article belongs to, instead of related articles
* Update articles/show tests
* Update collections/show tests
* Update HTML on articles/show view
* Update articles/show translations in en.yml
* Update collections/show translations in en.yml
* Created collections/show partials for a root and non-root collection, and for delimited collection rendering
* Updated collections/show view to conditionally render root/non-root partials depending on whether collection has parents
* Add page title to title tags in articles/show and collections/show views
* Update pugin to 1.6.20
* Sanitize concepts/show page
* Improve MarkdownHelper.convert method to fully sanitise markdown and html prior to showing on views
* Update articles/show, collections/show, concepts/shows views to remove sanitization and html_safe following improvement to MarkdownHelper.convert

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -718,15 +718,14 @@ en:
   places:
     all_regions: 'All Regions.'
     region_constituencies: 'Find constituencies by region.'
+  # collection translations
+  collections:
+    root_collection:
+      in_this_section: 'In this section'
   # article translations
   articles:
     show:
-      related_articles: 'Related Articles'
-      collection_articles: 'Collections this article belongs to'
-  # collection translations
-  collections:
-    show:
-      in_this_section: 'In this section'
+      up_to: 'Up to:'
   # no content translations
   no_content:
     empty_list:
